<resources>
    <string name="app_name">EffectiveMobileJobSearch</string>
    <string name="lookingNow">Сейчас просматривают</string>
    <string name="people">человек</string>
    <string name="search">Поиск</string>
    <string name="favorites">Избранные</string>
    <string name="responses">Отклики</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="title_login1">Вход в личный кабинет</string>
    <string name="job_search">Поиск работы</string>
    <string name="email">Электронная почта или телефон</string>
    <string name="email_error">Вы ввели неверный e-mail</string>
    <string name="continue_button">Продолжить</string>
    <string name="with_password">Войти с паролем</string>
    <string name="search_for_employees">Поиск сотрудников</string>
    <string name="placement_of_vacancies">Размещение вакансий и доступ к базе резюме</string>
    <string name="search_employees">Я ищу сотрудников</string>
    <string name="send_code">Отправили код на example@mail.ru</string>
    <string name="explanation">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет.</string>
    <string name="confirm">Подтвердить</string>
    <string name="symbol1">|</string>
    <string name="symbol2">*</string>
    <string name="logic">Здесь может быть логика для входа с паролем</string>
    <string name="sendCodeToEmail">Отправили код н а %1$s</string>
    <string name="respond">Откликнуться\n</string>
    <string name="moreVacanciesButtonText">Ещё %1$s вакансии</string>
    <string name="searchHelp">Должность, ключевые слова</string>
    <string name="filter_button">filter button</string>
</resources>